# pygensuggestions

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  AI_USAGE_POLICY.md  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SUPPORT.md  pyproject.toml  test.py
.github/: CODEOWNERS
.github/workflows/: python-package.yaml  python-publish.yaml
pygensuggestions/: __init__.py  __init__.pyi  __main__.py  _types.pyi  lib.py  lib.pyi
