[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygensuggestions"
version = "0.9.0"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
maintainers = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "Pure python implementation of the _suggestions module."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Programming Language :: Python :: Implementation :: CPython", "Operating System :: OS Independent", "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Version Control :: Git", "Topic :: Utilities", "Natural Language :: English", "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/jonathandung/pygensuggestions"
Repository = "https://github.com/jonathandung/pygensuggestions.git"
Issues = "https://github.com/jonathandung/pygensuggestions/issues"
Download = "https://pypi.org/project/pygensuggestions/#files"
"Release Notes" = "https://github.com/jonathandung/pygensuggestions/releases/tag/0.9.0"

[project.optional-dependencies]
dev = ["pre-commit>=4.6.0", "mypy>=1.20.2", "uv>=0.11.8", "build>=1.4.4", "twine[keyring]>=6.2.0", "packaging>=26.2"]

[tool.setuptools]
packages = ["pygensuggestions"]

[tool.mypy]
python_version = "3.9"
files = ["pygensuggestions/**/*.pyi"]
follow_imports = "skip"
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_incomplete_stub = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_any_generics = true
extra_checks = true
exclude_gitignore = true

[tool.coverage.report]
exclude_lines = [".*# pragma: no (cover|branch)", "if __name__ == '__main__':", "raise NotImplementedError", "def __repr__\\(self.*\\):", "\\.\\.\\."]

[tool.ruff]
target-version = "py39"
exclude = [".git", "__pycache__", "build", "dist", "venv", "env", ".venv", ".env", "*.egg-info", ".eggs", ".mypy_cache", ".pytest_cache", "docs/source/conf.py"]

[tool.ruff.lint]
ignore = ["ANN401", "ASYNC109", "B904", "B905", "E226", "E227", "E228", "E252", "E261", "E301", "E302", "E305", "E306", "E401", "E501", "E701", "E702", "E741", "E743", "N803", "N806", "N812", "N818", "PLC0415", "PLC2701", "PLC2801", "PLW1514", "RET502", "RET503", "RUF067", "TRY003", "TRY300", "W292"]
select = ["A", "ARG", "ANN", "B", "BLE001", "COM819", "C4", "C901", "E", "EM103", "ERA001", "EXE", "F", "FIX002", "FLY002", "FURB", "G", "ISC", "LOG", "N", "PERF", "PIE", "PGH004", "PL", "PYI", "RET", "RSE102", "RUF", "Q", "S", "SIM", "SLOT", "T100", "T201", "TRY", "UP", "W", "YTT"]
preview = true
typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["ANN", "FURB180", "PYI"]
"**/*.pyi" = ["PYI021", "PYI036", "PYI042"]
"pygensuggestions/lib.py" = ["B007"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["__import__", "_functools.partial", "_operator.attrgetter", "_operator.itemgetter", "_operator.methodcaller", "pygensuggestions._internal.compat.partial", "pygensuggestions.exceptions.IgnoreErrors", "pygensuggestions.IgnoreErrors", "collections.namedtuple", "functools.partial", "globals", "itertools.count", "sys.intern", "type"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-branches = 13
