[build-system]
requires = ["uv_build>=0.11.17"]
build-backend = "uv_build"

[project]
name = "pygensuggestions"
version = "1.1.0"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
maintainers = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "Generate a suggestion deterministically based on mistyped input and possible targets."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Operating System :: OS Independent", "Development Status :: 5 - Production/Stable", "Framework :: Pytest", "Intended Audience :: Developers", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Version Control :: Git", "Topic :: Utilities", "Natural Language :: English", "Environment :: Console", "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/jonathandung/pygensuggestions"
Repository = "https://github.com/jonathandung/pygensuggestions.git"
Issues = "https://github.com/jonathandung/pygensuggestions/issues"
Download = "https://pypi.org/project/pygensuggestions/#files"
"Release Notes" = "https://github.com/jonathandung/pygensuggestions/releases/tag/1.1.0"

[project.optional-dependencies]
test = ["pytest==8.3.5", "pytest-cov==5.0.0", "pytest-sugar==1.1.1"]

[project.scripts]
pygensuggestions = "pygensuggestions.__main__:main"

[tool.setuptools]
packages = ["pygensuggestions"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test.py"
python_functions = "test_*"
addopts = ["-v", "--maxfail", "0", "--tb", "short", "--cov", "pygensuggestions", "--cov-report", "term-missing", "--cov-fail-under", "100"]
minversion = "8.0.0"
required_plugins = ["pytest-cov==5.0.0", "pytest-sugar==1.1.1"]

[tool.ruff]
target-version = "py38"
required-version = ">=0.15.15"

[tool.ruff.lint]
ignore = ["E226", "E227", "E261", "E302", "E305", "E501", "E701", "RET502", "T201", "W292"]
select = ["A", "ARG", "ANN", "B", "BLE001", "COM819", "C4", "E", "EM103", "ERA001", "EXE", "F", "FIX002", "FLY002", "FURB", "G", "ISC", "LOG", "N", "PERF", "PIE", "PGH004", "PL", "PYI", "RET", "RSE102", "RUF", "Q", "S", "SIM", "SLOT", "T100", "T201", "TRY", "UP", "W", "YTT"]
preview = true
typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["ANN", "FURB180", "PYI"]
"**/*.pyi" = ["PYI021", "PYI036", "PYI042"]
"pygensuggestions/lib.py" = ["B007"]
"test.py" = ["S101"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.environment]
python-version = "3.8"
python-platform = "all"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.src]
include = ["pygensuggestions"]

[tool.uv]
required-version = ">=0.11.17"

[tool.uv.build-backend]
module-name = "pygensuggestions"
module-root = ""